# acton-service

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  FEATURE_FLAGS.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  TUTORIAL.md  Taskfile.yml  cliff.toml  config.example.toml  deny.toml
.cargo/: audit.toml
.github/: FUNDING.yml  release.yml
acton-cli/: Cargo.toml  README.md
acton-cli/src/: main.rs
acton-cli/src/commands/: mod.rs  service.rs  setup.rs
acton-cli/src/commands/service/: new.rs  validate.rs
acton-cli/src/commands/service/add/: endpoint.rs  graphql.rs  grpc.rs  middleware.rs  mod.rs  version.rs  worker.rs
acton-cli/src/commands/service/dev/: health.rs  logs.rs  mod.rs  run.rs
acton-cli/src/commands/service/generate/: config.rs  deployment.rs  mod.rs  proto.rs
acton-cli/src/template_engine/: mod.rs
acton-cli/src/templates/: cargo_toml.rs  config.rs  deployment.rs  graphql.rs  handlers.rs  mod.rs  service.rs  worker.rs
acton-cli/src/utils/: cargo.rs  format.rs  git.rs  mod.rs
acton-cli/src/validator/: mod.rs
acton-cli/templates/handlers/: endpoint.rs.jinja  mod.rs.jinja
acton-cli/templates/service/: .gitignore.jinja  Cargo.toml.jinja  README.md.jinja  build.rs.jinja  main.rs.jinja
acton-service/: Cargo.toml  askama.toml  build.rs
acton-service/examples/: CEDAR_EXAMPLE_README.md  README.md  background-worker.rs  build.rs.example  cedar-authz.rs  config.toml.example  custom-config.rs  event-driven.rs  jwt-public.pem  ping-pong.rs  policies.cedar  single-port.rs  test-cedar.sh  test-observability.rs
acton-service/examples/authorization/: README.md  cedar-authz.rs  jwt-private.pem  policies.cedar
acton-service/examples/basic/: README.md  ping-pong.rs  simple-api.rs  users-api.rs
acton-service/examples/database/: README.md  database-api.rs  docker-compose.yml
acton-service/examples/database/migrations/: 001_create_tables.sql  002_seed_data.sql
acton-service/examples/events/: README.md  event-driven.rs
acton-service/examples/graphql/: graphql-basic.rs
acton-service/examples/grpc/: README.md  cedar-grpc.rs  policies.cedar  single-port.rs
acton-service/examples/htmx/: README.md  task-manager.rs
acton-service/examples/htmx/templates/: base.html  index.html
acton-service/examples/htmx/templates/auth/: login.html
acton-service/examples/htmx/templates/tasks/: edit.html  item.html
acton-service/examples/observability/: README.md  test-metrics.rs  test-observability.rs  test-prometheus-metrics.rs
acton-service/examples/templates/: README.md  config.toml.example
acton-service/examples/websocket/: chat-server.rs
acton-service/proto/: hello.proto  orders.proto  ping.proto
acton-service/src/: build_utils.rs  cache.rs  checks.rs  clickhouse_backend.rs  client_tls.rs  config.rs  crypto.rs  database.rs  error.rs  events.rs  extensions.rs  health.rs  ids.rs  lib.rs  observability.rs  openapi.rs  pagination.rs  pool_health.rs  responses.rs  server.rs  service_builder.rs  state.rs  surrealdb_backend.rs  tls.rs  turso.rs  versioning.rs
acton-service/src/accounts/: config.rs  error.rs  handlers.rs  mod.rs  notification.rs  types.rs
acton-service/src/accounts/storage/: mod.rs  pg.rs  surrealdb_impl.rs  turso.rs
acton-service/src/agents/: background_worker.rs  health.rs  jwt_revocation.rs  messages.rs  mod.rs  pool.rs
acton-service/src/audit/: agent.rs  alert.rs  alert_webhook.rs  archive.rs  chain.rs  config.rs  config_audit.rs  decorators.rs  event.rs  failure_tracker.rs  logger.rs  middleware.rs  mod.rs  otlp.rs  syslog.rs  wiring.rs
acton-service/src/audit/storage/: clickhouse_impl.rs  lazy.rs  mod.rs  pg.rs  surrealdb_impl.rs  turso.rs
acton-service/src/auth/: config.rs  mod.rs  password.rs
acton-service/src/auth/api_keys/: mod.rs
acton-service/src/auth/key_rotation/: agent.rs  config.rs  key_metadata.rs  manager.rs  mod.rs
acton-service/src/auth/key_rotation/storage/: mod.rs  pg.rs  surrealdb_impl.rs  turso.rs
acton-service/src/auth/oauth/: mod.rs  provider.rs  state.rs
acton-service/src/auth/oauth/providers/: custom.rs  github.rs  google.rs  mod.rs
acton-service/src/auth/tokens/: jwt_generator.rs  mod.rs  paseto_generator.rs  refresh.rs
acton-service/src/graphql/: builder.rs  cedar.rs  context.rs  mod.rs  mount.rs  service.rs
acton-service/src/grpc/: health.rs  interceptors.rs  middleware.rs  mod.rs  server.rs
acton-service/src/handlers/: error.rs  mod.rs  query.rs  response.rs  traits.rs
acton-service/src/htmx/: helpers.rs  mod.rs  responders.rs
acton-service/src/lockout/: config.rs  middleware.rs  mod.rs  notification.rs  service.rs
acton-service/src/middleware/: cedar.rs  governor.rs  jwt.rs  metrics.rs  mod.rs  paseto.rs  rate_limit.rs  request_context.rs  request_tracking.rs  resilience.rs  revocation.rs  route_matcher.rs  security_headers.rs  token.rs
acton-service/src/repository/: error.rs  mod.rs  pagination.rs  traits.rs
acton-service/src/session/: config.rs  csrf.rs  extractors.rs  flash.rs  mod.rs
acton-service/src/sse/: broadcast.rs  config.rs  connection.rs  event.rs  htmx.rs  mod.rs
acton-service/src/templates/: context.rs  helpers.rs  mod.rs  response.rs
acton-service/src/websocket/: broadcast.rs  config.rs  handler.rs  messages.rs  mod.rs  rooms.rs
acton-service/tests/: crypto_provider.rs  governor_integration.rs  graphql_auth.rs  graphql_cedar.rs  graphql_smoke.rs  graphql_versioning.rs  resilience_router.rs
examples/api-gateway/: Cargo.toml  build.rs
examples/api-gateway/src/: config.rs  grpc_client.rs  main.rs
examples/api-gateway/src/handlers/: users_proxy.rs
examples/api-gateway/src/models/: mod.rs  user.rs
examples/api-gateway/src/services/: mod.rs
examples/backend-service/: .env.example  Cargo.toml  README.md  build.rs
examples/backend-service/src/: config.rs  grpc_service.rs  lib.rs  main.rs
examples/backend-service/src/handlers/: health.rs  mod.rs  users.rs
examples/backend-service/src/models/: mod.rs  user.rs
examples/users-api/: .env.example  Cargo.toml
examples/users-api/src/: handlers.rs  main.rs  models.rs
(+99 files in other folders)
