[workspace]
members = [
    "acton-service",
    "acton-cli"
]
default-members = ["acton-service", "acton-cli"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["roland@govcraft.ai"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["net", "rt", "rt-multi-thread", "signal", "sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["net"] }

# HTTP framework
axum = { version = "0.8.6", features = ["macros"] }
tower = { version = "0.5.2", features = ["util", "timeout", "limit", "buffer", "make"] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "compression-gzip",
    "cors",
    "timeout",
    "request-id",
    "propagate-header",
    "metrics",
    "catch-panic",
    "limit",
    "validate-request",
    "sensitive-headers",
    "set-header",
] }
tower-otel-http-metrics = "0.16.0"

# gRPC framework
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

# Database
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }

# Turso/libsql
libsql = { version = "0.9", features = ["replication", "remote"] }

# Redis
redis = { version = "0.32", features = ["tokio-comp", "cluster-async", "streams"] }
deadpool-redis = "0.22.0"

# NATS
async-nats = "0.45.0"

# JWT
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Configuration
figment = { version = "0.10.19", features = ["toml", "env", "json"] }

# Tracing and observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
tracing-opentelemetry = "0.31.0"

# Resilience
tower-resilience-circuitbreaker = "0.4.7"
tower-resilience-bulkhead = "0.4.7"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Time
chrono = { version = "0.4.42", features = ["clock", "std", "serde"], default-features = false }

# UUID
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# HTTP client
reqwest = { version = "0.12.24", features = ["json"] }

# Async utilities
futures = "0.3.31"
async-trait = "0.1.89"

# HTTP types
http = "1.3.1"
