[package]
name = "acton-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for scaffolding and managing acton-service microservices"
repository = "https://github.com/Govcraft/acton-service"
homepage = "https://github.com/Govcraft/acton-service"
documentation = "https://docs.rs/acton-cli"
readme = "README.md"
keywords = ["microservice", "cli", "scaffolding", "codegen", "framework"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "acton"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
acton-service = { path = "../acton-service", version = "0.5.2" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI-specific dependencies
clap = { version = "4.5.29", features = ["derive", "cargo", "env", "unicode", "wrap_help"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.9"
console = "0.15.10"
colored = "2.2.0"
toml = "0.8.23"

# File operations
walkdir = "2.5.0"
ignore = "0.4.24"

# Config and paths
directories = "5.0.1"

# Process execution
duct = "0.13.7"

# DateTime
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
clap_complete = "4.5.60"
dirs = "6.0.0"
minijinja = "2.12.0"
rust-embed = "8.9.0"
