[package]
name = "acton-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-ready Rust backend framework with type-enforced API versioning"
repository = "https://github.com/Govcraft/acton-service"
homepage = "https://github.com/Govcraft/acton-service"
documentation = "https://docs.rs/acton-service"
readme = "../README.md"
keywords = ["microservice", "framework", "grpc", "rest", "websocket"]
categories = ["web-programming::http-server", "asynchronous", "network-programming"]

# These are used by generated protobuf code from tonic::include_proto!
[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-otel-http-metrics = { workspace = true, optional = true }

# gRPC framework (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Turso/libsql (optional)
libsql = { workspace = true, optional = true }

# Redis (optional)
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

# NATS (optional)
async-nats = { workspace = true, optional = true }

# JWT (optional - feature-gated)
jsonwebtoken = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP types
http = { workspace = true }

# Other dependencies
xdg = "3.0.0"
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
tonic-health = { version = "0.14.2", optional = true }
tonic-reflection = { version = "0.14.2", optional = true }
once_cell = "1.21.3"
tower-resilience-circuitbreaker = { workspace = true, optional = true }
tower-resilience-bulkhead = { workspace = true, optional = true }
cedar-policy = { version = "4.7.0", default-features = false, features = ["datetime", "ipaddr"], optional = true }
regex = "1.12.2"
mti = "1.0.0"
acton-reactive = { version = "7.0.0"}
tokio-util = "0.7.17"
dashmap = "6.1.0"
anyhow.workspace = true
rusty_paseto = "0.9.0"
argon2 = { version = "0.5.3", optional = true }
rand = { version = "0.8", optional = true }
oauth2 = { version = "5.0.0", optional = true }
openidconnect = { version = "4.0.1", optional = true }
base64 = { version = "0.22.1", features = ["std"], optional = true }

[features]
default = ["http", "observability"]
http = []
grpc = ["dep:tonic", "dep:prost", "dep:tonic-prost", "dep:tonic-prost-build", "dep:tokio-stream", "dep:tonic-health", "dep:tonic-reflection"]
database = ["dep:sqlx"]
turso = ["dep:libsql"]
cache = ["dep:redis", "dep:deadpool-redis"]
events = ["dep:async-nats"]
observability = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
resilience = [ "dep:tower-resilience-circuitbreaker", "dep:tower-resilience-bulkhead"]
otel-metrics = ["dep:tower-otel-http-metrics", "observability"]
governor = []
websocket = []
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
cedar-authz = ["dep:cedar-policy", "cache"]
jwt = ["dep:jsonwebtoken"]

# Authentication features
auth = ["dep:argon2", "dep:rand"]                          # Core: password hashing + token generation
oauth = ["auth", "dep:oauth2", "dep:openidconnect", "dep:base64"]  # OAuth/OIDC providers (requires auth)
auth-full = ["auth", "oauth", "jwt", "cache", "database"]  # All auth features (excludes turso - mutually exclusive with database)

full = ["http", "grpc", "websocket", "database", "cache", "events", "observability", "resilience", "otel-metrics", "governor", "openapi", "cedar-authz", "jwt", "auth"]
tonic-health = ["dep:tonic-health"]
tonic-reflection = ["dep:tonic-reflection"]
tower-resilience-circuitbreaker = ["dep:tower-resilience-circuitbreaker"]
tower-resilience-bulkhead = ["dep:tower-resilience-bulkhead"]
cedar-policy = ["dep:cedar-policy"]
base64 = ["dep:base64"]

# Basic examples
[[example]]
name = "simple-api"
path = "examples/basic/simple-api.rs"
required-features = ["http"]

[[example]]
name = "users-api"
path = "examples/basic/users-api.rs"
required-features = ["http"]

[[example]]
name = "ping-pong"
path = "examples/basic/ping-pong.rs"
required-features = ["grpc"]

# gRPC examples
[[example]]
name = "single-port"
path = "examples/grpc/single-port.rs"
required-features = ["grpc"]

# Event-driven examples
[[example]]
name = "event-driven"
path = "examples/events/event-driven.rs"
required-features = ["grpc"]

# Authorization examples
[[example]]
name = "cedar-authz"
path = "examples/authorization/cedar-authz.rs"
required-features = ["cedar-authz", "cache"]

# Observability examples
[[example]]
name = "test-metrics"
path = "examples/observability/test-metrics.rs"
required-features = ["otel-metrics"]

[[example]]
name = "test-observability"
path = "examples/observability/test-observability.rs"
required-features = ["observability"]

# Database examples
[[example]]
name = "database-api"
path = "examples/database/database-api.rs"
required-features = ["database"]

# WebSocket examples
[[example]]
name = "chat-server"
path = "examples/websocket/chat-server.rs"
required-features = ["websocket"]

[build-dependencies]
prost-build = "0.14.1"
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
tempfile = "3.24.0"
