[package]
name = "acton-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Production-ready Rust backend framework with type-enforced API versioning"
repository = "https://github.com/Govcraft/acton-service"
homepage = "https://govcraft.github.io/acton-service/"
documentation = "https://docs.rs/acton-service"
readme = "../README.md"
keywords = ["microservice", "framework", "grpc", "rest", "websocket"]
categories = ["web-programming::http-server", "asynchronous", "network-programming"]

# These are used by generated protobuf code from tonic::include_proto!
[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true, optional = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
opentelemetry-instrumentation-tower = { workspace = true, optional = true }

# gRPC framework (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
tonic-prost-build = { workspace = true, optional = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Turso/libsql (optional)
libsql = { workspace = true, optional = true }

# SurrealDB (optional)
surrealdb = { workspace = true, optional = true }

# Redis (optional)
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

# NATS (optional)
async-nats = { workspace = true, optional = true }

# JWT (optional - feature-gated)
jsonwebtoken = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
figment = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-prometheus = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP types
http = { workspace = true }

# Other dependencies
xdg = "3.0.0"
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }
tonic-health = { version = "0.14.2", optional = true }
tonic-reflection = { version = "0.14.2", optional = true }
once_cell = "1.21.3"
tower-resilience-circuitbreaker = { workspace = true, optional = true }
tower-resilience-bulkhead = { workspace = true, optional = true }
cedar-policy = { version = "4.7.0", default-features = false, features = ["datetime", "ipaddr"], optional = true }
regex = "1.12.2"
mti = "1.0.0"
acton-reactive = "8.1.1"
tokio-util = "0.7.17"
dashmap = "6.1.0"
anyhow.workspace = true
rusty_paseto = "0.10.0"
argon2 = { version = "0.5.3", features = ["std"], optional = true }
rand = { version = "0.10", optional = true }
oauth2 = { version = "5.0.0", optional = true }
openidconnect = { version = "4.0.1", optional = true }
base64 = { version = "0.22.1", features = ["std"], optional = true }
governor = { version = "0.10.4", optional = true }
tower-sessions = { version = "0.14.0", default-features = false, optional = true }
time = { version = "0.3.44", optional = true }
tower-sessions-memory-store = { version = "0.14.0", optional = true }
tower-sessions-redis-store = { version = "0.16.0", optional = true }
axum-htmx = { version = "0.8.1", features = ["auto-vary", "serde"], optional = true }
askama = { version = "0.16", optional = true }
askama_web = { version = "0.16", features = ["axum-0.8"], optional = true }
paginator-rs = { version = "0.2.2", optional = true }
paginator-axum = { version = "0.2.2", optional = true }
paginator-sqlx = { version = "0.2.2", optional = true }
blake3 = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
tracing-journald = { workspace = true, optional = true }
# ClickHouse (optional)
clickhouse = { version = "0.14.3", features = ["uuid"], optional = true }
# GraphQL (optional)
async-graphql = { version = "7.2.1", features = ["uuid", "chrono", "dataloader", "apollo_tracing", "tracing"], optional = true }
async-graphql-axum = { version = "7.2.1", optional = true }
bytes = { version = "1.11.1", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["logging", "tls12", "std"], optional = true }
rustls-pki-types = { version = "1.14.1", features = ["std"], optional = true }
arc-swap = { version = "1.9.2", optional = true }

[features]
default = ["http", "observability", "crypto-aws-lc-rs"]

# Cryptographic provider selection for rustls. Exactly one must be enabled.
# aws-lc-rs is the default: FIPS 140-3 capable, ecosystem-aligned with rustls 0.23+,
# tonic 0.14+, and sqlx 0.8+. Ring is retained as an opt-in alternative for
# build environments that cannot tolerate aws-lc-rs's C toolchain requirements.
crypto-aws-lc-rs = [
    "dep:rustls",
    "rustls/aws-lc-rs",
    "tokio-rustls?/aws_lc_rs",
    "reqwest/rustls-tls-no-provider",
    "reqwest/rustls-tls-webpki-roots-no-provider",
    "sqlx?/tls-rustls-aws-lc-rs",
    "tonic?/tls-aws-lc",
]
crypto-ring = [
    "dep:rustls",
    "rustls/ring",
    "tokio-rustls?/ring",
    "reqwest/rustls-tls",
    "sqlx?/tls-rustls-ring-webpki",
    "tonic?/tls-ring",
]
http = []
grpc = ["dep:tonic", "dep:prost", "dep:tonic-prost", "dep:tonic-prost-build", "dep:tokio-stream", "dep:tonic-health", "dep:tonic-reflection"]
database = ["dep:sqlx"]
turso = ["dep:libsql"]
surrealdb = ["dep:surrealdb"]
cache = ["dep:redis", "dep:deadpool-redis"]
events = ["dep:async-nats"]
observability = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]
resilience = [ "dep:tower-resilience-circuitbreaker", "dep:tower-resilience-bulkhead"]
# Internal umbrella: shared metrics machinery (meter provider + HTTP metrics
# tower layer). Enabled transitively by otel-metrics and prometheus-metrics;
# not intended to be enabled directly by downstream crates.
_metrics = ["dep:opentelemetry-instrumentation-tower", "observability"]
# OpenTelemetry HTTP metrics with OTLP push export to a collector.
otel-metrics = ["_metrics"]
# Pull-based Prometheus metrics exposed at the /metrics endpoint.
prometheus-metrics = ["_metrics", "dep:opentelemetry-prometheus", "dep:prometheus"]
governor = ["dep:governor"]
websocket = []
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
cedar-authz = ["dep:cedar-policy", "cache"]
jwt = ["dep:jsonwebtoken"]

# Authentication features
auth = ["dep:argon2", "dep:rand", "dep:blake3", "dep:base64"] # Core: password hashing + token generation + key rotation
oauth = ["auth", "dep:oauth2", "dep:openidconnect", "dep:base64"]  # OAuth/OIDC providers (requires auth)
auth-full = ["auth", "oauth", "jwt", "cache", "database", "login-lockout", "accounts"]  # All auth features (excludes turso - mutually exclusive with database)

full = ["http", "grpc", "websocket", "database", "cache", "events", "observability", "resilience", "otel-metrics", "prometheus-metrics", "governor", "openapi", "cedar-authz", "jwt", "auth", "session-memory", "session-redis", "htmx", "askama", "sse", "pagination-full", "handlers", "login-lockout", "tls", "accounts", "account-handlers", "journald", "graphql", "graphql-cedar", "audit", "oauth"]
tonic-health = ["dep:tonic-health"]
tonic-reflection = ["dep:tonic-reflection"]
tower-resilience-circuitbreaker = ["dep:tower-resilience-circuitbreaker"]
tower-resilience-bulkhead = ["dep:tower-resilience-bulkhead"]
cedar-policy = ["dep:cedar-policy"]
base64 = ["dep:base64"]

# Session management (optional)
session = ["dep:tower-sessions", "dep:time", "dep:rand"]
session-memory = ["session", "dep:tower-sessions-memory-store"]
session-redis = ["session", "dep:tower-sessions-redis-store"]

# HTMX support
htmx = ["dep:axum-htmx"]

# Template engine
askama = ["dep:askama", "dep:askama_web"]

# Server-Sent Events (uses axum built-in SSE)
sse = []

# Convenience: All HTMX-related features + session
htmx-full = ["htmx", "askama", "sse", "session-memory"]

# Pagination support
pagination = ["dep:paginator-rs"]
pagination-axum = ["pagination", "dep:paginator-axum"]
pagination-sqlx = ["pagination", "dep:paginator-sqlx"]
pagination-full = ["pagination", "pagination-axum", "pagination-sqlx"]

# Repository traits for database CRUD abstractions
repository = []

# Handler traits for REST CRUD patterns
handlers = ["repository"]

# TLS support (rustls-based HTTPS)
tls = ["dep:tokio-rustls", "dep:rustls-pki-types", "dep:arc-swap"]

# Audit logging with BLAKE3 hash chaining
audit = ["dep:blake3"]

# Login lockout with progressive delay and account lockout
login-lockout = ["auth", "cache"]

# Account lifecycle management (NIST AC-2)
accounts = ["auth"]

# Pre-built REST handlers for account management
account-handlers = ["accounts"]
# Native systemd journal integration
journald = ["dep:tracing-journald"]

# ClickHouse analytical database (composable with any primary database)
clickhouse = ["dep:clickhouse"]

# GraphQL transport (async-graphql + Axum integration). Adds a third sibling
# transport to `http` and `grpc`, mounted by `ServiceBuilder` under the same
# versioned router and middleware stack.
graphql = ["dep:async-graphql", "dep:async-graphql-axum", "dep:bytes"]
# GraphQL with Cedar policy authorization callable from resolvers via
# `acton_service::graphql::CedarResolverCheck`.
graphql-cedar = ["graphql", "cedar-authz"]

# Basic examples
[[example]]
name = "simple-api"
path = "examples/basic/simple-api.rs"
required-features = ["http"]

[[example]]
name = "users-api"
path = "examples/basic/users-api.rs"
required-features = ["http"]

[[example]]
name = "ping-pong"
path = "examples/basic/ping-pong.rs"
required-features = ["grpc"]

# gRPC examples
[[example]]
name = "single-port"
path = "examples/grpc/single-port.rs"
required-features = ["grpc"]

[[example]]
name = "cedar-grpc"
path = "examples/grpc/cedar-grpc.rs"
required-features = ["grpc", "cedar-authz", "auth"]

# Event-driven examples
[[example]]
name = "event-driven"
path = "examples/events/event-driven.rs"
required-features = ["grpc"]

# Authorization examples
[[example]]
name = "cedar-authz"
path = "examples/authorization/cedar-authz.rs"
required-features = ["cedar-authz", "cache"]

# Observability examples
[[example]]
name = "test-metrics"
path = "examples/observability/test-metrics.rs"
required-features = ["otel-metrics"]

[[example]]
name = "test-observability"
path = "examples/observability/test-observability.rs"
required-features = ["observability"]

[[example]]
name = "test-prometheus-metrics"
path = "examples/observability/test-prometheus-metrics.rs"
required-features = ["prometheus-metrics"]

# Database examples
[[example]]
name = "database-api"
path = "examples/database/database-api.rs"
required-features = ["database"]

# WebSocket examples
[[example]]
name = "chat-server"
path = "examples/websocket/chat-server.rs"
required-features = ["websocket"]

# HTMX examples
[[example]]
name = "task-manager"
path = "examples/htmx/task-manager.rs"
required-features = ["htmx-full"]

# GraphQL examples
[[example]]
name = "graphql-basic"
path = "examples/graphql/graphql-basic.rs"
required-features = ["graphql"]

[build-dependencies]
prost-build = "0.14.1"
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
rcgen = "0.14.8"
tempfile = "3.24.0"
