[package]
name = "backend-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP server (axum)
axum = { workspace = true }
http = { workspace = true }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Middleware and service composition
tower = { workspace = true }
tower-http = { workspace = true }

# Configuration
figment = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Observability
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
lazy_static = "1.5.0"
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
