[package]
name = "users-api"
version = "0.1.0"
edition = "2021"

[dependencies]
acton-service = { path = "../../acton-service", features = ["full"] }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
